# uv-sam-trivy-template

./: .gitignore  .trivyignore  README.md  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: deploy-dev.yml  deploy.yml  pr-checks.yml
.github/workflows/scripts/: report.sh
src/: main.py
