[project]
name = "uv-sam-trivy-template"
version = "0.1.0"
description = "Python app with uv, SAM and Trivy integration"
readme = "README.md"
dependencies = [
    "boto3>=1.28.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
show-fixes = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "I", # isort
    "N", # pep8-naming
    "B", # flake8-bugbear
    "C4" # flake8-comprehensions
]
fixable = ["ALL"]
ignore = ["E741"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
